--- a/src/app/pages/inventarios/traspasos/traspasos.component.scss
+++ b/src/app/pages/inventarios/traspasos/traspasos.component.scss
@@ -90,6 +90,11 @@ nb-alert {
   margin-bottom: 1rem;
 }
 
+.detalle-actions {
+  display: flex;
+  gap: 0.5rem;
+}
+
 .detalle-section h3 {
   margin: 0;
 }
